# EnsembleOT

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/ensembleot/: __init__.py  aggregate.py  clustering.py  config.py  convenience.py  ensemble.py  fgw.py  gw.py  io.py  lifting.py  metrics.py  operator.py  sinkhorn.py  storage.py  weights.py
src/ensembleot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_aggregate.py  test_consensus_streaming.py  test_convenience.py  test_fgw.py  test_fgw_custom_m.py  test_gw.py  test_metrics.py  test_operator.py  test_random_voronoi.py  test_sinkhorn.py  test_smoke.py  test_storage.py  test_weighted_aggregate.py  test_weights.py
